<resources>
    <string name="app_name" translatable="false">EVA Facial Mouse</string>
    <string name="service_description">EVA is a mouse emulator that moves the pointer as you move your head. It tracks your face using the frontal camera of your device.</string>
    <string name="settings_label">EVA settings</string>
    <string name="settings_motion_settings">Motion settings</string>
    <string name="settings_horizontal">Horizontal</string>
    <string name="settings_horizontal_speed">Horizontal speed</string>
    <string name="settings_vertical">Vertical</string>
    <string name="settings_vertical_speed">Vertical speed</string>
    <string name="settings_acceleration">Acceleration</string>
    <string name="settings_acceleration_summary">Pointer acceleration. 0 disables</string>
    <string name="settings_click_settings">Click settings</string>
    <string name="settings_detection_settings">Detection settings</string>
    <string name="settings_never">Never</string>
    <string name="settings_after_ten_seconds">after 10 seconds</string>
    <string name="settings_after_thirty_seconds">after 30 seconds</string>
    <string name="settings_after_one_minute">after 1 minute</string>
    <string name="settings_after_two_minutes">after 2 minutes</string>
    <string name="settings_after_five_minutes">after 5 minutes</string>
    <string name="settings_dwell_area">Dwell area</string>
    <string name="settings_dwell_area_summary">Maximum displacement before restarting the dwell time</string>
    <string name="settings_dwell_time">Dwell time</string>
    <string name="settings_dwell_time_summary">Time to wait (deciseconds) before making click</string>
    <string name="settings_motion_smoothing">Motion smoothing</string>
    <string name="settings_motion_smoothing_summary">Tremor reduction filter. 0 disables</string>
    <string name="settings_motion_threshold">Motion threshold</string>
    <string name="settings_motion_threshold_summary">Minimum displacement to start moving pointer</string>
    <string name="settings_sound_on_click">Play sound on click</string>
    <string name="settings_consecutive_clicks">Consecutive clicks</string>
    <string name="settings_time_without_detection">Disable EVA when face not detected</string>
    <string name="settings_interface_settings">Interface settings</string>
    <string name="settings_dock_menu_position">Dock Menu position</string>
    <string name="settings_dock_menu_position_left">Left</string>
    <string name="settings_dock_menu_position_right">Right</string>
    <string name="settings_dock_menu_position_top">Top</string>
    <string name="settings_dock_menu_position_bottom">Bottom</string>
    <string name="settings_ui_elements_size">Interface elements size</string>
    <string name="settings_ui_elements_size_xlarge">Extra large</string>
    <string name="settings_ui_elements_size_large">Large</string>
    <string name="settings_ui_elements_size_normal">Normal</string>
    <string name="settings_ui_elements_size_small">Small</string>
    <string name="settings_help">Help</string>
    <string name="settings_configuration_wizard">Configuration wizard</string>
    <string name="settings_version">Version</string>
    <string name="settings_wizard_will_run">The wizard will run the next time you start EVA</string>
    <string name="settings_send_anon_error_reports">Send anonymous error reports</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_use_camera2_api">Use camera2 API</string>
    <string name="settings_use_camera2_api_auto">Auto</string>
    <string name="settings_use_camera2_api_yes">Yes (experimental)</string>
    <string name="settings_use_camera2_api_no">No</string>
    <string name="settings_lock_speed_settings">Lock speed settings</string>
    <string name="action_click">Click</string>
    <string name="action_long_click">Long click</string>
    <string name="action_collapse">Collapse</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_expand">Expand</string>
    <string name="action_paste">Paste</string>
    <string name="action_scroll_backward">Scroll backward</string>
    <string name="action_scroll_forward">Scroll forward</string>
    <string name="action_select">Select</string>
    <string name="action_focus">Focus</string>
    <string name="dock_back_button">Back button</string>
    <string name="dock_home_button">Home button</string>
    <string name="dock_recents_button">Recents button</string>
    <string name="dock_notifications_button">Notifications button</string>
    <string name="dock_menu_button">Expand/collapse dock menu</string>
    <string name="dock_softkeyboard_button">Open keyboard</string>
    <string name="dock_toggle_context_menu">Toggle pointer Context Menu</string>
    <string name="dock_toggle_rest_mode">Toggle Rest mode. To disable automatic clicks while you read or watch a video, for instance.</string>
    <string name="notification_running_click_to_stop">Running (click to stop)</string>
    <string name="notification_stopped_click_to_start">Stopped (click to start)</string>
    <string name="notification_stop_confirmation">Stop EVA Facial Mouse?</string>
    <string name="notification_stop_confirmation_no">Cancel</string>
    <string name="notification_stop_confirmation_yes">Yes</string>
    <string name="notification_settings_label">Settings</string>
    <string name="opencv_package_installation_failed">Package installation failed</string>
    <string name="opencv_incompatible">OpenCV Manager service is incompatible with this app. Try to update it via Google Play.</string>
    <string name="opencv_init_error">OpenCV was not initialised correctly. Application will be shut down</string>
    <string name="opencv_installation">OpenCV Manager installation</string>
    <string name="opencv_installation_summary">EVA requires OpenCV Manager. Try to install it?</string>
    <string name="opencv_not_ready">OpenCV is not ready</string>
    <string name="opencv_installation_in_progress">Installation is in progress. Wait or cancel?</string>
    <string name="opencv_wait">Wait</string>
    <string name="opencv_retry">Retry</string>
    <string name="crash_toast_text">EVA Facial Mouse crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing EVA to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="slave_settings_gamepad_settings">Gamepad settings</string>
    <string name="slave_settings_gamepad_location">Gamepad location</string>
    <string name="slave_settings_top_left">Top left</string>
    <string name="slave_settings_bottom_left">Bottom left</string>
    <string name="slave_settings_top_center">Top center</string>
    <string name="slave_settings_bottom_center">Bottom center</string>
    <string name="slave_settings_top_right">Top right</string>
    <string name="slave_settings_bottom_right">Bottom right</string>
    <string name="slave_settings_label">Slave mode preferences</string>
    <string name="slave_settings_gamepad_interface_settings">Gamepad interface</string>
    <string name="slave_settings_gamepad_transparency">Transparency</string>
    <string name="slave_settings_gamepad_abs_speed">Abs. mode speed</string>
    <string name="slave_settings_gamepad_abs_speed_summary">Speed when using absolute mode</string>
    <string name="slave_settings_gamepad_rel_sensitivity">Rel. mode sensitivity</string>
    <string name="slave_settings_gamepad_rel_sensitivity_summary">Sensitivity when using relative mode (low values set high sensitivity)</string>
    <string name="slave_settings_gamepad_preferences">Gamepad preferences</string>
    <string name="slave_settings_mouse_preferences">Mouse preferences</string>
    <string name="wizard_icon_name">EVA Wizard</string>
    <string name="wizard_next">Next</string>
    <string name="wizard_back">Back</string>
    <string name="wizard_finish">Finish</string>
    <string name="wizard_prerequisites">Prerequisites</string>
    <string name="wizard_install">Install</string>
    <string name="wizard_keyboard_setup">Keyboard set up</string>
    <string name="wizard_set_keyboard">
        <![CDATA[1. Open: \'Settings > Language & input\']]>
        \n2. Enable \'EVA Keyboard\'
        \n3. Tap \'Default\'
        \n4. Choose \'EVA Keyboard\'
    </string>
    <string name="wizard_set_keyboard_lollipop">
        <![CDATA[1. Open: \'Settings > Language & input > Current Keyboard > CHOOSE KEYBOARDS\']]>
        \n2. Enable \'EVA Keyboard\'
        \n3. Go back
        \n4. Tap \'Current Keyboard\'
        \n5. Choose \'EVA Keyboard\'
    </string>
    <string name="wizard_positioning">Positioning</string>
    <string name="wizard_positioning_summary">Mount the device facing the face, with the head in a natural position, around 30–50cm.\nThe full face should appear inside the viewer to get detected. When this happens, the border turns into red and a cross is drawn on the center of the face.</string>
    <string name="wizard_dock_menu">Dock menu</string>
    <string name="wizard_dock_menu_summary">The Dock Menu on the left edge of the screen allows quick access to a number of functions</string>
    <string name="wizard_home">Home</string>
    <string name="wizard_recents">Recents</string>
    <string name="wizard_open_notifications">Open notifications</string>
    <string name="wizard_open_keyboard">Open keyboard</string>
    <string name="wizard_scroll_buttons">Scroll Buttons</string>
    <string name="wizard_scroll_buttons_description">To scroll contents, use the Scroll Buttons</string>
    <string name="wizard_keyboard">Keyboard</string>
    <string name="wizard_keyboard_remarks">Most keyboards don\'t work with EVA. To enable the supplied compatible keyboard:</string>
    <string name="wizard_keyboard_not_configured">Keyboard not configured</string>
    <string name="wizard_keyboard_not_configured_confirm">Are you sure you want to continue without configuring the keyboard?</string>
    <string name="wizard_pointer_speed">Pointer speed</string>
    <string name="wizard_pointer_speed_summary">Move your head to move the pointer. Try to reach the whole screen. Adjust speeds if necessary.</string>
    <string name="wizard_configuration_settings">Configuration settings</string>
    <string name="wizard_configuration_settings_summary">To adjust the speed of the pointer and other settings, go to\nSettings > Accessibility > EVA Facial Mouse > Settings</string>
    <string name="wizard_settings">Settings</string>
    <string name="wizard_known_limitations">Known limitations</string>
    <string name="wizard_limitations_summary">Due to Android restrictions, some features are not currently available, yet.
        \n- You can\'t use the camera
        \n- You can\'t take incoming calls in some devices
        \n- Most games don\'t work
        \n- Applications such as Maps, Earth, Gallery and web browsers work with limitations
        \n- Scroll Buttons not always work (e.g. for web browsers). To scroll in such cases, try using the Navigation Keyboard (see below)
    </string>
    <string name="wizard_skip_wizard">Skip this wizard</string>
    <string name="wizard_close_wizard_question">Close wizard?</string>
    <string name="wizard_pre_click_summary">To make click, stop the pointer over the desired location. After a few moments the click will be generated automatically. If the element below accepts more than one action, the Context Menu will be displayed.</string>
    <string name="wizard_click_enabled_next">In the next screen, the pointer with the click function will be enabled</string>
</resources>