<?xml version="1.0" encoding="utf-8"?>
<!-- 
 /*
 ** Enable Viacam for Android, a camera based mouse emulator
 **
 ** Copyright (C) 2015 Cesar Mauri Loba (CREA Software Systems)
 **
 ** This program is free software: you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
 ** the Free Software Foundation, either version 3 of the License, or
 ** (at your option) any later version.
 **
 ** This program is distributed in the hope that it will be useful,
 ** but WITHOUT ANY WARRANTY; without even the implied warranty of
 ** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ** GNU General Public License for more details.
 **
 ** You should have received a copy of the GNU General Public License
 ** along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/slave_settings_label">

        <PreferenceScreen
            android:key="gamepad_preferences"
            android:title="@string/slave_settings_gamepad_preferences" >
            <intent 
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.crea_si.eviacam.service" 
                android:targetClass="com.crea_si.eviacam.slavemode.GamepadPreferencesActivity"
                android:data="slave_mode" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="mouse_preferences"
            android:title="@string/slave_settings_mouse_preferences" >
            <intent 
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.crea_si.eviacam.service" 
                android:targetClass="com.crea_si.eviacam.common.MousePreferencesActivity"
                android:data="slave_mode" />
        </PreferenceScreen>

    </PreferenceCategory>
        
</PreferenceScreen>